better centering, prevents clipping of form on vertically short devices

--- a/main.css
+++ b/main.css
@@ -111,13 +111,20 @@ main {
     opacity: 0.5;
     text-align: center;
 }
+.form-wrapper::before {
+    margin: auto;
+    content: '';
+}
 .form-wrapper {
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+}
+.form-wrapper::after {
+    margin: auto;
+    content: '';
 }
 .app-wrapper.dark footer {
     background-color: rgba(0, 0, 0, 0.2);
